--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,10 @@ main {
     padding: 13px;
     padding-bottom: 0;
     font-size: 1.1rem;
+    position: relative;
 }
 
-.note img {
+.note img:not(.pin img) {
     width: 100%;
     background: green;
     aspect-ratio: 7/8;
@@ -75,6 +76,14 @@ main {
 .note figcaption {
     width: 100%;
     padding-block: 10px;
+}
+
+.pin {
+    width: 15%;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 @media screen and (min-width: 400px) {
