--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,15 +73,21 @@ main {
     box-shadow: 3px 3px 8px  rgba(0, 0, 0, .8);
     scale: .99;
     border-radius: 3px;
-    transition: all .3s ease;
+    transition: all .2s ease;
 }
 
 .note:hover{
     box-shadow: 6px 6px 20px rgb(0, 0, 0);
     scale: 1.1;
-    translate: -10px -7px;
+    translate: 10px -10px;
     rotate: 5deg;
     z-index: 100;
+}
+
+/* effect on siblings if one of them is on hover */
+.note:has(~ :hover),
+.note:hover ~ .note {
+    scale: .95;
 }
 
 .note img:not(.pin img) {
