--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -70,14 +70,14 @@ main {
     font-size: 1.1rem;
     position: relative;
     cursor: pointer;
-    box-shadow: 3px 3px 8px  rgba(0, 0, 0, .8);
-    scale: .99;
+    box-shadow: 3px 3px 8px rgba(0, 0, 0, 0.8);
+    scale: 0.99;
     border-radius: 3px;
-    transition: all .2s ease;
+    transition: all 0.2s ease;
 }
 
-.note:hover{
-    box-shadow: 6px 6px 20px rgb(0, 0, 0);
+.note:hover {
+    box-shadow: 3px 3px 30px rgb(0, 0, 0);
     scale: 1.1;
     translate: 10px -10px;
     rotate: 5deg;
@@ -87,7 +87,7 @@ main {
 /* effect on siblings if one of them is on hover */
 .note:has(~ :hover),
 .note:hover ~ .note {
-    scale: .95;
+    scale: 0.95;
 }
 
 .note img:not(.pin img) {
@@ -99,7 +99,13 @@ main {
 
 .note figcaption {
     width: 100%;
-    padding-block: 10px;
+    margin-block: 10px;
+    /* css tricks */
+    display: -webkit-box;
+    line-clamp: 2;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .pin {
