--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ img {
     --note-margin-inline: 10px;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     width: 100%;
     height: 100vh;
@@ -146,14 +150,14 @@ main {
 /** TRIGGERS */
 .layover::after {
     content: "";
-    position: absolute;
+    position: fixed;
     background: #0000007c;
     inset: 0;
     z-index: 1000;
 }
 
 .modal {
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -214,4 +218,8 @@ main {
 
 .flex-col {
     flex-direction: column;
+}
+
+.overflow-hidden {
+    overflow: hidden;
 }
