esc trigger bugged ( resolved )

--- a/assets/css/escape.css
+++ b/assets/css/escape.css
@@ -1,18 +1,20 @@
 #escape {
     position: fixed;
-    top: -40px;
+    top: -50px;
     left: 50%;
     transform: translateX(-50%);
     height: fit-content;
     width: fit-content;
     background: transparent;
+    background: rgba(255, 255, 255, 0.823);
     border-color: white;
-    color: white;
+    color: rgba(0, 0, 0, 0.649);
     padding: 5px 12px;
     border-radius: 15px;
     cursor: pointer;
     z-index: 100000;
     transition: all 0.2s ease;
+    text-wrap: nowrap;
 }
 
 #escape.active {
