added a loader component minor fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,6 +181,11 @@ main {
     }
 }
 
+@media screen and (orientation: landscape) {
+    .modal {
+        width: 25vw;
+    }
+}
 @media screen and (max-width: 1200px) and (orientation: landscape) {
     .modal {
         width: 35vw;
