--- a/assets/css/button.css
+++ b/assets/css/button.css
@@ -33,7 +33,8 @@ button {
 }
 
 #add-btn,
-#remove-btn {
+#remove-btn,
+#escape-remove-btn {
     background: rgba(138, 82, 22, 0.6);
     color: rgba(255, 255, 255, 0.8);
     margin-block: 10px;
@@ -41,11 +42,17 @@ button {
 
 .hover-on #add-btn:hover,
 .hover-on #remove-btn:hover,
+.hover-on #escape-remove-btn,
 #add-btn:active,
-#remove-btn:active {
+#remove-btn:active,
+#escape-remove-btn:active {
     background: rgba(138, 82, 22, 0.7);
     color: rgba(255, 255, 255, 1);
     scale: 105%;
+}
+
+button.disabled {
+    cursor: not-allowed;
 }
 
 @keyframes bounce {
