--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,10 @@ main {
 }
 
 @media screen and (min-width: 576px) {
+    .notes-wrapper {
+        max-width: 80%;
+    }
+
     .note {
         /* 40px = 10px + 10px + 10px + 10px di .box margin */
         width: calc((100% - (4 * var(--note-margin-inline))) / 2);
@@ -169,7 +173,7 @@ main {
 
 @media screen and (min-width: 992px) {
     .notes-wrapper {
-        max-width: 900px;
+        max-width: 850px;
     }
 
     .note {
